# sweetie_bot_proto2_description

./: CMakeLists.txt  README.md  package.xml  urdf.rviz
config/: joint_names_sweetie_bot_proto2_description.yaml
launch/: description.launch  display.launch  gazebo.launch
meshes/: arrow.STL  base_link.DAE  base_link.STL  bone11.DAE  bone11.STL  bone12.DAE  bone12.STL  bone13.DAE  bone13.STL  bone14.DAE  bone14.STL  bone15.DAE  bone15.STL  bone21.DAE  bone21.STL  bone22.DAE  bone22.STL  bone23.DAE  bone23.STL  bone24.DAE  bone24.STL  bone25.DAE  bone25.STL  bone31.DAE  bone31.STL  bone32.DAE  bone32.STL  bone33.DAE  bone33.STL  bone34.DAE  bone34.STL  bone35.DAE  bone35.STL  bone41.DAE  bone41.STL  bone42.DAE  bone42.STL  bone43.DAE  bone43.STL  bone44.DAE  (+15 more)
meshes/collision/: base_link.STL  bone11.STL  bone12.STL  bone13.STL  bone14.STL  bone15.STL  bone21.STL  bone22.STL  bone23.STL  bone24.STL  bone25.STL  bone31.STL  bone32.STL  bone33.STL  bone34.STL  bone35.STL  bone41.STL  bone42.STL  bone43.STL  bone44.STL  bone45.STL  bone51.STL  bone52.STL  bone53.STL  bone54.STL  eye_right.STL  screen_left.STL
urdf/: fix_files.py  sweetie_bot_proto2_description.urdf  sweetie_bot_proto2_description_dynamics.urdf  sweetie_bot_proto2_description_stl.urdf
